--- a/vgg_and_lstm.ipynb
+++ b/vgg_and_lstm.ipynb
@@ -102,19 +102,28 @@
     "\n",
     "    accuracy = accuracy_score(all_labels, all_preds)\n",
     "    return accuracy\n",
-    "def plot_metrics(train_losses, val_accuracies):\n",
+    "def plot_metrics(train_losses, val_accuracies, train_accuracies):\n",
     "    epochs = range(1, len(train_losses) + 1)\n",
-    "    plt.figure(figsize=(12, 4))\n",
-    "    plt.subplot(1, 2, 1)\n",
+    "    plt.figure(figsize=(18, 5))\n",
+    "\n",
+    "    plt.subplot(1, 3, 1)\n",
     "    plt.plot(epochs, train_losses, label='Training Loss')\n",
     "    plt.xlabel('Epochs')\n",
     "    plt.ylabel('Loss')\n",
     "    plt.legend()\n",
-    "    plt.subplot(1, 2, 2)\n",
+    "\n",
+    "    plt.subplot(1, 3, 2)\n",
     "    plt.plot(epochs, val_accuracies, label='Validation Accuracy')\n",
     "    plt.xlabel('Epochs')\n",
     "    plt.ylabel('Accuracy')\n",
     "    plt.legend()\n",
+    "\n",
+    "    plt.subplot(1, 3, 3)\n",
+    "    plt.plot(epochs, train_accuracies, label='Train Accuracy')\n",
+    "    plt.xlabel('Epochs')\n",
+    "    plt.ylabel('Accuracy')\n",
+    "    plt.legend()\n",
+    "\n",
     "    plt.show()"
    ]
   },
@@ -163,13 +172,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Hyperparameters\n",
+    "# Hyperparameters grid\n",
     "num_epochs = 20\n",
-    "batch_size = 64\n",
-    "learning_rate = 0.0001\n",
+    "learning_rates = [0.001, 0.0001, 0.0001]\n",
+    "batch_sizes = [8, 16]\n",
+    "best_val_accuracy = 0\n",
+    "best_model = None\n",
     "\n",
     "# Directories and device setup\n",
-    "root_dir = '/kaggle/input/about-china-train-test-lrw/about_china_29_processed'\n",
+    "root_dir = '/kaggle/input/lrw-25-1000/preprocessed_25_1000'\n",
+    "device = torch.device('cuda:0' if torch.cuda.is_available() else 'cpu')\n",
     "\n",
     "# Define transformations\n",
     "transform = transforms.Compose([\n",
@@ -178,15 +190,84 @@
     "])\n",
     "\n",
     "# Dataset and DataLoader\n",
-    "train_val_dataset = LipReadingDataset(root_dir, 'train', transform=transform, max_classes=2)\n",
-    "train_dataset, val_dataset = split_dataset(train_val_dataset)\n",
+    "train_val_dataset = LipReadingDataset(root_dir, 'train', transform=transform, max_classes=25)\n",
+    "train_dataset, val_dataset = split_dataset(train_val_dataset, train_ratio=0.95)\n",
+    "test_dataset = LipReadingDataset(root_dir, 'test', transform=transform, max_classes=25)\n",
     "\n",
+    "best_train_loss = []\n",
+    "best_val_acc = []\n",
+    "best_train_acc = []\n",
     "\n",
-    "test_dataset = LipReadingDataset(root_dir, 'test', transform=transform, max_classes=2)\n",
+    "# Hyperparameter tuning\n",
+    "for learning_rate in learning_rates:\n",
+    "    for batch_size in batch_sizes:\n",
+    "        train_loader = DataLoader(train_dataset, batch_size=batch_size, shuffle=True)\n",
+    "        val_loader = DataLoader(val_dataset, batch_size=batch_size, shuffle=False)\n",
+    "        test_loader = DataLoader(test_dataset, batch_size=1, shuffle=False)\n",
     "\n",
-    "train_loader = DataLoader(train_dataset, batch_size=batch_size, shuffle=True)\n",
-    "val_loader = DataLoader(val_dataset, batch_size=batch_size, shuffle=False)\n",
-    "test_loader = DataLoader(test_dataset, batch_size=1, shuffle=False)"
+    "        num_classes = len(train_val_dataset.classes)\n",
+    "        model = LipReadingModel(num_classes=num_classes)\n",
+    "        model = nn.DataParallel(model, device_ids=[0, 1]) # For 2 GPUs\n",
+    "        model.to(device)\n",
+    "        criterion = nn.CrossEntropyLoss()\n",
+    "        optimizer = optim.Adam(model.parameters(), lr=learning_rate)\n",
+    "        scheduler = torch.optim.lr_scheduler.StepLR(optimizer, step_size=5, gamma=0.1)\n",
+    "\n",
+    "        # Collect and plot metrics\n",
+    "        train_losses = []\n",
+    "        val_accuracies = []\n",
+    "        train_accuracies = []\n",
+    "\n",
+    "        # Training loop\n",
+    "        for epoch in range(num_epochs):\n",
+    "            model.train()\n",
+    "            epoch_loss = 0.0\n",
+    "            progress_bar = tqdm(train_loader, desc=f'Epoch {epoch + 1}/{num_epochs}')\n",
+    "            \n",
+    "            all_labels = []\n",
+    "            all_preds = []\n",
+    "\n",
+    "            for videos, labels in progress_bar:\n",
+    "                videos = videos.to(device)\n",
+    "                labels = labels.to(device)\n",
+    "                outputs = model(videos)\n",
+    "                loss = criterion(outputs, labels)\n",
+    "                optimizer.zero_grad()\n",
+    "                loss.backward()\n",
+    "                torch.nn.utils.clip_grad_norm_(model.parameters(), max_norm=1.0)\n",
+    "                optimizer.step()\n",
+    "                epoch_loss += loss.item()\n",
+    "                progress_bar.set_postfix(loss=loss.item())\n",
+    "                \n",
+    "                _, preds = torch.max(outputs, 1)\n",
+    "                all_labels.extend(labels.cpu().numpy())\n",
+    "                all_preds.extend(preds.cpu().numpy())\n",
+    "\n",
+    "            avg_loss = epoch_loss / len(train_loader)\n",
+    "            train_accuracy = accuracy_score(all_labels, all_preds)\n",
+    "            val_accuracy = evaluate_model(model, val_loader, device)\n",
+    "\n",
+    "            train_losses.append(avg_loss)\n",
+    "            val_accuracies.append(val_accuracy)\n",
+    "            train_accuracies.append(train_accuracy)\n",
+    "\n",
+    "            print(f'Learning Rate: {learning_rate}, Batch Size: {batch_size}, Epoch [{epoch + 1}/{num_epochs}], Avg Loss: {avg_loss:.4f}, Train Accuracy: {train_accuracy:.4f}, Validation Accuracy: {val_accuracy:.4f}')\n",
+    "            \n",
+    "            scheduler.step()  # Step the scheduler\n",
+    "            \n",
+    "            if epoch > 5 and val_accuracy < 0.06:\n",
+    "                break\n",
+    "\n",
+    "            # Track the best model based on validation accuracy\n",
+    "            if val_accuracy > best_val_accuracy:\n",
+    "                best_val_accuracy = val_accuracy\n",
+    "                best_model = model.state_dict()\n",
+    "                best_hyperparams = (learning_rate, batch_size)\n",
+    "        if val_accuracy >= best_val_accuracy:\n",
+    "            best_train_loss = train_losses\n",
+    "            best_val_acc = val_accuracies\n",
+    "            best_train_acc = train_accuracies\n",
+    "        plot_metrics(train_losses, val_accuracies, train_accuracies)"
    ]
   },
   {
@@ -195,74 +276,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "device = torch.device('cuda:0' if torch.cuda.is_available() else 'cpu')\n",
-    "# Model, Loss, and Optimizer\n",
-    "num_classes = len(train_val_dataset.classes)\n",
+    "total_params = sum(p.numel() for p in model.parameters())\n",
+    "print(f\"Number of parameters: {total_params}\")\n",
     "\n",
-    "model = LipReadingModel(num_classes=num_classes)\n",
-    "model = nn.DataParallel(model, device_ids=[0, 1]) #For 2 GPUs\n",
-    "model.to(device)\n",
-    "criterion = nn.CrossEntropyLoss()\n",
-    "optimizer = optim.Adam(model.parameters(), lr=learning_rate)\n",
+    "# Save the best model after all epochs\n",
+    "best_model_path = '/kaggle/working/best_vgg16_lstm_25Class_model.pth'\n",
+    "torch.save(best_model, best_model_path)\n",
+    "print(f\"Best model saved to {best_model_path} with learning rate: {best_hyperparams[0]} and batch size: {best_hyperparams[1]}\")\n",
     "\n",
-    "scheduler = torch.optim.lr_scheduler.StepLR(optimizer, step_size=10, gamma=0.1)\n",
-    "\n",
-    "\n",
-    "best_val_accuracy = 0\n",
-    "\n",
-    "# Collect and plot metrics\n",
-    "train_losses = []\n",
-    "val_accuracies = []\n",
-    "\n",
-    "\n",
-    "# Training loop\n",
-    "for epoch in range(num_epochs):\n",
-    "    model.train()\n",
-    "    epoch_loss = 0.0\n",
-    "    progress_bar = tqdm(train_loader, desc=f'Epoch {epoch + 1}/{num_epochs}')\n",
-    "    \n",
-    "    for videos, labels in progress_bar:\n",
-    "        videos = videos.to(device)\n",
-    "        labels = labels.to(device)\n",
-    "        outputs = model(videos)\n",
-    "        loss = criterion(outputs, labels)\n",
-    "        optimizer.zero_grad()\n",
-    "        loss.backward()\n",
-    "        torch.nn.utils.clip_grad_norm_(model.parameters(), max_norm=1.0)\n",
-    "        optimizer.step()\n",
-    "        epoch_loss += loss.item()\n",
-    "        progress_bar.set_postfix(loss=loss.item())\n",
-    "\n",
-    "    avg_loss = epoch_loss / len(train_loader)\n",
-    "    val_accuracy = evaluate_model(model, val_loader, device)\n",
-    "    train_losses.append(avg_loss)\n",
-    "    val_accuracies.append(val_accuracy)\n",
-    "    print(f'Epoch [{epoch + 1}/{num_epochs}], Avg Loss: {avg_loss:.4f}, Validation Accuracy: {val_accuracy:.4f}')\n",
-    "    \n",
-    "    scheduler.step()  # Step the scheduler"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Save the trained model\n",
-    "model_save_path = '/kaggle/working/vgg16_lstm_model.pth'\n",
-    "torch.save(model.state_dict(), model_save_path)\n",
-    "print(f\"Model saved to {model_save_path}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "# Evaluate on test set\n",
+    "model.load_state_dict(best_model)\n",
     "test_accuracy = evaluate_model(model, test_loader, device)\n",
-    "print(f'Test Accuracy: {test_accuracy:.4f}')"
+    "print(f'Test Accuracy: {test_accuracy:.4f}')\n",
+    "\n",
+    "# Plot metrics for the best model\n",
+    "plot_metrics(train_losses, val_accuracies, train_accuracies)"
    ]
   }
  ],
