--- a/vgg_and_lstm.ipynb
+++ b/vgg_and_lstm.ipynb
@@ -102,28 +102,36 @@
     "\n",
     "    accuracy = accuracy_score(all_labels, all_preds)\n",
     "    return accuracy\n",
+    "\n",
     "def plot_metrics(train_losses, val_accuracies, train_accuracies):\n",
     "    epochs = range(1, len(train_losses) + 1)\n",
     "    plt.figure(figsize=(18, 5))\n",
     "\n",
     "    plt.subplot(1, 3, 1)\n",
     "    plt.plot(epochs, train_losses, label='Training Loss')\n",
-    "    plt.xlabel('Epochs')\n",
+    "    plt.xlabel('Epoch')\n",
     "    plt.ylabel('Loss')\n",
+    "    plt.title('Training Loss')\n",
     "    plt.legend()\n",
+    "    plt.grid(True)\n",
     "\n",
     "    plt.subplot(1, 3, 2)\n",
     "    plt.plot(epochs, val_accuracies, label='Validation Accuracy')\n",
-    "    plt.xlabel('Epochs')\n",
+    "    plt.xlabel('Epoch')\n",
     "    plt.ylabel('Accuracy')\n",
+    "    plt.title('Validation Accuracy')\n",
     "    plt.legend()\n",
+    "    plt.grid(True)\n",
     "\n",
     "    plt.subplot(1, 3, 3)\n",
-    "    plt.plot(epochs, train_accuracies, label='Train Accuracy')\n",
-    "    plt.xlabel('Epochs')\n",
+    "    plt.plot(epochs, train_accuracies, label='Training Accuracy')\n",
+    "    plt.xlabel('Epoch')\n",
     "    plt.ylabel('Accuracy')\n",
+    "    plt.title('Training Accuracy')\n",
     "    plt.legend()\n",
+    "    plt.grid(True)\n",
     "\n",
+    "    plt.tight_layout()\n",
     "    plt.show()"
    ]
   },
@@ -139,7 +147,6 @@
     "        super(LipReadingModel, self).__init__()\n",
     "        # VGG16 as feature extractor\n",
     "        self.vgg = torchvision.models.vgg16(weights='DEFAULT')\n",
-    "        # self.vgg.features[0] = nn.Conv2d(1, 64, kernel_size=3, stride=1, padding=1)  # Modify first conv layer for grayscale\n",
     "\n",
     "        self.vgg.classifier = nn.Identity()  # Remove final classification layer\n",
     "        \n",
@@ -180,7 +187,7 @@
     "best_model = None\n",
     "\n",
     "# Directories and device setup\n",
-    "root_dir = '/kaggle/input/lrw-25-1000/preprocessed_25_1000'\n",
+    "root_dir = '/kaggle/input/lrw_25_words/preprocessed_25_1000'\n",
     "device = torch.device('cuda:0' if torch.cuda.is_available() else 'cpu')\n",
     "\n",
     "# Define transformations\n",
